packages/cjs-to-esm/test/snapshots/package-corpus/core-js/full/error/index.js
import parent from "../../actual/error";
const _cjs_default = parent;
export default _cjs_default;
